[package]
name = "nsfw_toggle"
version = "0.1.0"
authors = ["Ben Richeson <benricheson101@gmail.com>"]
edition = "2018"

[dependencies]
dotenv = "0.15.0"
if_chain = "1.0.1"
regex = "1.4.3"
serde_json = "1.0.61"
toml = "0.5.8"
# serde = "1.0.123"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity.git"
branch = "current" # interaction stuff is only on `current` branch
default-features = false
features = [
  "client",
  "gateway",
  "model",
  "rustls_backend",
  "unstable_discord_api", # for interaction stuff
]

[dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread", "time"]

[dependencies.serde]
version = "1"
features = ["derive"]

[features]
default = ["cmd_log", "server_log"]
bot_list_guild_count = []
cmd_log = []
server_log = []
